Clearer output for test

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "id": "4bc16f4f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "8d0893dc",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 106,
    "id": "0918b60c",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "ef01d363",
    "metadata": {},
    "outputs": [
@@ -66,6 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "k=10\n",
       "Image is from s1 (True: 1)\n",
       "Image is from s1 (True: 1)\n",
       "Image is from s1 (True: 1)\n",
@@ -90,6 +91,8 @@
       "Image is from s6 (True: 6)\n",
       "Image is from s6 (True: 6)\n",
       "Image is from s6 (True: 6)\n",
+      "\n",
+      "k=20\n",
       "Image is from s1 (True: 1)\n",
       "Image is from s1 (True: 1)\n",
       "Image is from s1 (True: 1)\n",
@@ -113,7 +116,8 @@
       "Image is from s6 (True: 6)\n",
       "Image is from s6 (True: 6)\n",
       "Image is from s6 (True: 6)\n",
-      "Image is from s6 (True: 6)\n"
+      "Image is from s6 (True: 6)\n",
+      "\n"
      ]
     }
    ],
@@ -123,6 +127,7 @@
     "    U_k = get_U_k(k)\n",
     "\n",
     "    # Loop over every test image\n",
+    "    print(f'k={k}')\n",
     "    for i in range(6):\n",
     "        for j in range(4, 8):\n",
     "            # Get coordinate of test image in eigenspace\n",
@@ -147,12 +152,13 @@
     "                    best_fit = fit\n",
     "\n",
     "            # Result\n",
-    "            print(f\"Image is from s{int(best_idx/image_train)+1} (True: {i+1})\")"
+    "            print(f\"Image is from s{int(best_idx/image_train)+1} (True: {i+1})\")\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "e329af5c",
    "metadata": {},
    "outputs": [
