--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 79,
    "id": "4bc16f4f",
    "metadata": {},
    "outputs": [],
@@ -33,18 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "id": "8d0893dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Transpose to get the correct dimensions for U and Vh\n",
-    "U, S, Vh = np.linalg.svd(X.transpose())"
+    "U, S, Vh = np.linalg.svd(X.transpose(), full_matrices=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "id": "0918b60c",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 82,
    "id": "3120a04f",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 84,
    "id": "ef01d363",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 71,
    "id": "e329af5c",
    "metadata": {},
    "outputs": [
